kubernetes/nginx-ingress-k8/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: bizleal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
    # kubernetes.io/ingress.global-static-ip-name: bizleal-api-static-ip
spec:
  tls:
    - hosts:
        - bizleal.net
        - api.bizleal.net
        - pma.bizleal.net
      secretName: ssl-cert-production
  rules:
  - host: "bizleal.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bizleal-api-service
              port:
                number: 5000
  - host: "api.bizleal.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bizleal-api-service
              port:
                number: 5000

  - host: "pma.bizleal.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin-service
              port:
                number: 8080
